change search bar

--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
   </div>
   <div id="content" class="emoji">
     <span>
-      
+      <form class="search" action="">
+        <input type="search" placeholder="Search here..." required>
+        <button type="submit">make wish</button>
+      </form>
     </span>
-    <span>
-      <form class="search-container" action="//llamaswill.tumblr.com/search">
-  <input id="search-box" type="text" class="search-box" name="q" />
-  <label for="search-box"><span class="glyphicon glyphicon-search search-icon"></span></label>
-  <input type="submit" id="search-submit" />
-</form>
-    </span>
-    <span>🎂</span>
+    <span>wish you luck</span>
+    <span>halo</span>
   </div>
 </div>
 <!-- partial -->
