--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Countdown Timer</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <div class="snow"></div>
 <div class="snow"></div>
 <div class="snow"></div>
@@ -127,20 +117,26 @@
     </ul>
   </div>
   <div id="content" class="emoji">
-    <div class="tester">
-      <p>The cat and the hat</p>
-<!--       <p>The cat and the hat</p> -->
+    <div class="typing-slider">
+      <p>buat kamu yang ulang tahun</p>
+      <p>yang suka nonton one piece</p>
+      <p>yang suka pake masker kemana-mana</p>
+      <p>sampai gangerti lg senyum apa engga</p>
+      <p>dan juga gasuka kecambah</p>
+      <p>cepet banget rasanya, ga kerasa sekarang dah kuliah</p>
+      <p>semoga sehat selalu</p>
+      <p>dan diberi kesehatan raga maupun batin</p>
+      <p>semoga semester ini dapet nilai bagus</p>
+      <p>dan dimudahkan memahami materi</p>
+      <p>semoga km makin tahan banting</p>
+      <p>setahan hp nokia kalo jatuh</p>
+      <p>semangat terus ya put kuliahnya :)</p>
     </div>
-    <span>
+<!--     <span>
       <form class="search" action="">
         <input type="search" placeholder="Your hope and wish" required>
         <button type="submit">make wish</button>
       </form>
-    </span>
+    </span> -->
   </div>
 </div>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
