--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Countdown Timer</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div class="snow"></div>
 <div class="snow"></div>
 <div class="snow"></div>
@@ -140,3 +150,8 @@
     </span> -->
   </div>
 </div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
