change title website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Countdown Timer</title>
+  <title>🎉Happy Birthday🎉</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -117,7 +117,7 @@
 <div class="snow"></div>
 <div class="snow"></div>
 <div class="container">
-  <h1 id="headline">Countdown to my birthday</h1>
+  <h1 id="headline">Putri Birthday Countdown</h1>
   <div id="countdown">
     <ul>
       <li><span id="days"></span>days</li>
